--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,19 +3,30 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
 }
 
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.micha.evereview"
+        applicationId 'com.micha.evereview'
         minSdk 21
         targetSdk 31
         versionCode 1
-        versionName "1.0"
+        versionName '1.0'
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                    'room.schemaLocation': "$projectDir/schemas".toString(),
+                    'room.incremental': 'true',
+                    'room.expandProjection': 'true'
+                ]
+            }
+        }
     }
 
     buildTypes {
@@ -43,8 +54,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'com.google.dagger:hilt-android:2.38.1'
+    implementation 'androidx.room:room-runtime:2.3.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-cbor:1.3.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     kapt 'com.google.dagger:hilt-compiler:2.38.1'
+    kapt 'androidx.room:room-compiler:2.3.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'androidx.room:room-testing:2.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
